fix top buttom z-index

--- a/src/sass/sections/_contacts.scss
+++ b/src/sass/sections/_contacts.scss
@@ -196,7 +196,7 @@
   right: 20;
   bottom: 20;
   padding: 0;
-  z-index: 20;
+  z-index: 5;
   width: 40px;
   height: 40px;
   border-radius: 50%;
